--- a/biblio_pseudo_alex.bib
+++ b/biblio_pseudo_alex.bib
@@ -1288,3 +1288,35 @@ Unique-ID = {{ISI:A1975AT25100002}},
 	file = {Full Text PDF:/home/yannick/Zotero/storage/CMHMCXT4/Nakayama et al. - 1998 - Theoretical study of the π→π excited states of li.pdf:application/pdf;Snapshot:/home/yannick/Zotero/storage/UJV7K369/(SICI)1097-461X(1998)662157AID-QUA73.0.html:text/html}
 }
 **** END BLA in all trnas polyenes
+
+@article{artemyev_photoelectron_2015,
+	title = {Photoelectron circular dichroism in the multiphoton ionization by short laser pulses. {I}. {Propagation} of single-active-electron wave packets in chiral pseudo-potentials},
+	volume = {142},
+	issn = {0021-9606, 1089-7690},
+	url = {http://aip.scitation.org/doi/10.1063/1.4922690},
+	doi = {10.1063/1.4922690},
+	language = {en},
+	number = {24},
+	urldate = {2018-10-25},
+	journal = {The Journal of Chemical Physics},
+	author = {Artemyev, Anton N. and Müller, Anne D. and Hochstuhl, David and Demekhin, Philipp V.},
+	month = jun,
+	year = {2015},
+	pages = {244105}
+}
+@article{lewin_modified_2008,
+	title = {Modified {Carbon} {Pseudopotential} for {Use} in {ONIOM} {Calculations} of {Alkyl}-{Substituted} {Metallocenes} $^{\textrm{†}}$ $^{\textrm{‡}}$},
+	volume = {112},
+	issn = {1089-5639, 1520-5215},
+	url = {http://pubs.acs.org/doi/abs/10.1021/jp711830a},
+	doi = {10.1021/jp711830a},
+	language = {en},
+	number = {50},
+	urldate = {2018-10-25},
+	journal = {The Journal of Physical Chemistry A},
+	author = {Lewin, John L. and Cramer, Christopher J.},
+	month = dec,
+	year = {2008},
+	pages = {12754--12760},
+	file = {Lewin and Cramer - 2008 - Modified Carbon Pseudopotential for Use in ONIOM C.pdf:/home/yannick/Zotero/storage/B5QNMM7V/Lewin and Cramer - 2008 - Modified Carbon Pseudopotential for Use in ONIOM C.pdf:application/pdf}
+}
