Changed diagram extension

--- a/main.tex
+++ b/main.tex
@@ -575,7 +575,7 @@ The critical paths are drawn in yellow.}
 
 \begin{figure}
 \begin{center}
-\includegraphics[width=6cm]{diagram.png}
+\includegraphics[width=6cm]{diagram}
 \end{center}
 {\Large
 \begin{minipage}[t]{3in}
